[project]
name = "ray-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anyscale>=0.26.80",
    "datasets==3.6.0",
    "deepspeed>=0.18.3",
    "filelock>=3.20.1",
    "ray[default,data,serve,train,tune]==2.52.0",
    "torch==2.7.0",
    "torchvision==0.22.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.3",
    "trl==0.23.1",
    "wandb>=0.23.1",
]
